# Event_analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.bat
event_analyzer/: __init__.py  __main__.py  exporters.py
event_analyzer/analysis/: __init__.py  exceedance.py  exceedance_count_curve.py  statistics.py
event_analyzer/controllers/: __init__.py  app_settings.py  divider_manager.py  plot_controller.py  region_selector.py  session.py  threshold_manager.py
event_analyzer/data/: __init__.py  csv_loader.py  data_manager.py  downsample.py  models.py  time_utils.py  units.py
event_analyzer/plotting/: __init__.py  colors.py  exceedance_chart.py  exceedance_count_curve.py  time_axis_item.py  time_series_plot.py
event_analyzer/ui/: __init__.py  column_selector.py  control_panel.py  main_window.py  main_window_controller.py  plot_workspace.py  themes.py  time_slider.py  workers.py
scripts/: __init__.py  generate_sample_csv.py
tests/: conftest.py  test_control_panel_auto_targets.py  test_core_logic_pytest.py  test_csv_loading_pytest.py  test_data_manager.py  test_divider_region.py  test_downsample.py  test_exceedance.py  test_exceedance_bar_chart.py  test_exceedance_count_curve.py  test_exporters.py  test_plot_workspace_tables.py  test_session_settings_statistics.py  test_threshold_manager.py  test_time_series_plot.py
time_series_threshold_app/: __init__.py  __main__.py
