[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-analyzer"
version = "0.1.0"
description = "Interactive desktop analyzer for large CSV time-series datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.6",
  "pyqtgraph>=0.13.7",
  "polars>=0.20",
  "numpy>=1.26",
  "matplotlib>=3.8",
]

[project.scripts]
event-analyzer = "event_analyzer.__main__:main"
time-series-threshold-app = "time_series_threshold_app.__main__:main"
event-analyzer-sample = "scripts.generate_sample_csv:main"

[tool.setuptools.packages.find]
include = ["event_analyzer*", "time_series_threshold_app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -p no:cacheprovider"
markers = [
  "gui: tests that need a Qt event loop or display-sensitive plotting backend",
  "requires_polars: tests that need Polars CSV support",
]
